--- a/css/styles.css
+++ b/css/styles.css
@@ -385,7 +385,8 @@ img {
     border-radius: 50%;
 }
 
-.sozial-link:hover {
+.sozial-link:hover,
+.sozial-link:focus {
     background: var(--button-order-hover);
 }
 .sozial-icon {
@@ -417,7 +418,8 @@ img {
 
 .customers-li {
     list-style: none;
-    width: 168px;
+    width: calc((100% - 120px) / 6);
+    /*width: 168px;*/
     height: 88px;
 }
 
@@ -427,14 +429,13 @@ img {
     justify-content: center;
     width: 100%;
     height: 100%;
-    background-color: var(--background-color);
     box-sizing: border-box;
     border: 1px solid var(--subtle-text-color);
     border-radius: 4px;
+    color: var(--button-order-hover);
 }
 
 .customers-link:hover {
-    background-color: var(--background-color);
     border: 1px solid var(--button-order-hover);
 }
 
@@ -444,6 +445,10 @@ img {
     fill: var(--subtle-text-color);
 }
 
+
+.customers-ul:hover,
+.customers-li:hover,
+.customers-link:hover,
 .customers-icon:hover {
     fill: var(--button-order-hover)
 }
@@ -595,7 +600,7 @@ img {
 }
 
 .foot-social-link:hover {
-    background: var(--button-order-hover);
+    background: var(--success-color);
 }
 /*
 .social-media {
