--- a/css/styles.css
+++ b/css/styles.css
@@ -278,7 +278,6 @@ img {
     display: flex; 
     align-items: center;
     justify-content: center;
-    max-width: 264px;
     height: 112px;
     background: var(--light-color);
     border-radius: 4px;
@@ -632,7 +631,7 @@ img {
 .foot-social-item {
     width: 40px;
     height: 40px;
-    flex-basis: calc((100% - 72px) / 3);
+    /*flex-basis: calc((100% - 3*16px) / 4);*/
     list-style: none;
 }
 
